# chisel

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  pyproject.toml
configs/: default.yaml
output/courtyard/: dense.ply  results.json  sparse.ply
python/: setup.py
python/chisel/: __init__.py  pipeline.py
python/chisel/eval/: metrics.py
python/chisel/perception/: __init__.py  depth_estimator.py  feature_extractor.py  feature_matcher.py
python/chisel/utils/: visualization.py
scripts/: download_eth3d.py  download_weights.py  run_eval.py  run_pipeline.py  visualize.py
src/bindings/: CMakeLists.txt  bindings.cpp
src/core/: CMakeLists.txt  io_colmap.cpp  io_eth3d.cpp  io_eth3d.h  mesh_utils.cpp  types.h
src/geometry/: CMakeLists.txt  bundle_adjustment.cpp  bundle_adjustment.h  epipolar.cpp  epipolar.h  factor_graph.cpp  factor_graph.h  feature_matching.cpp  feature_matching.h  pose_estimation.cpp  pose_estimation.h  triangulation.cpp  triangulation.h
src/reconstruction/: CMakeLists.txt  dense_stereo.cpp  dense_stereo.h  depth_fusion.cpp  depth_fusion.h  meshing.cpp  meshing.h
tests/cpp/: CMakeLists.txt  test_geometry.cpp
tests/python/: test_pipeline.py
